# timvx_engine

./: CMakeLists.txt  README.md  build_aml.sh  build_aml_local.sh  build_rk.sh  build_x64.sh  readme.md
examples/api_test/: input.npy  lenet.py  lenet_graph.json  lenet_para.json
examples/graph_test/: binary_graph_test.py
examples/lenet_test/: lennet_tflite_to_timvx.py
examples/ops_test/: activations_test.py  conv1d_test.py  conv2d_test.py  deconv1d_test.py  deconv2d_test.py  elementwise_test.py  groupedconv2d_test.py  instancenormalization_test.py  layernormalization_test.py  logsoftmax_test.py  matmul_test.py  maxpoolwithargmax_test.py  maxunpool2d_test.py  moments_test.py  ops_test.py  relational_operations_test.py  reorg_test.py  resize1d_test.py  scatternd_test.py  simple_operations_test.py  spatial_transformer_test.py  tile_test.py  transpose_conv_test.py  unstack_test.py
models/: squeezenet.json  squeezenet.weight
pytim/: __init__.py
pytim/frontends/: __init__.py  rknn_converter.py  tflite_convert.py  tflite_parser.py
pytim/timvx/: __init__.py  common.py  engine.py  logging.py
src/: engine_common.h  engine_wrapper.cpp  engine_wrapper.h  pytimvx.cpp  tensor_info.cpp  tensor_info.h  timvx_c_api.cpp  timvx_c_api.h  timvx_cxx_api.cpp  timvx_cxx_api.h  timvx_define.h  timvx_engine.cpp  timvx_engine.h
src/common/: io_uitl.h  io_util.cpp  json_parse.h  non_copyable.h  pystring.cpp  timer.cpp  timer.h  timvx_log.cpp  timvx_log.h
src/timvx_ops/: activation_op.cpp  activation_op.h  addn_op.cpp  addn_op.h  arg_op.cpp  arg_op.h  batch2space_op.cpp  batch2space_op.h  batchnorm_op.cpp  batchnorm_op.h  clip_op.cpp  clip_op.h  concat_op.cpp  concat_op.h  conv1d_op.cpp  conv1d_op.h  conv2d_op.cpp  conv2d_op.h  deconv1d_op.cpp  deconv1d_op.h  deconv2d_op.cpp  deconv2d_op.h  depth2space_op.cpp  depth2space_op.h  dropout_op.cpp  dropout_op.h  eltwise_op.cpp  eltwise_op.h  fullyconnected_op.cpp  fullyconnected_op.h  gather_op.cpp  gather_op.h  gathernd_op.cpp  gathernd_op.h  grouped_conv2d_op.cpp  grouped_conv2d_op.h  instancenormalization_op.cpp  instancenormalization_op.h  l2normalization_op.cpp  l2normalization_op.h  (+72 more)
tools/: model_benchmark.cpp  model_compile.cpp  model_infer.cpp  model_verify.cpp  timvx_model.cpp  timvx_model.h  tool_utils.cpp  tool_utils.h
